--- a/index.html
+++ b/index.html
@@ -2,9 +2,24 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>schdesign Logótár</title>
+	<title>Schdesign Logótár</title>
+	<link rel="stylesheet" type="text/css" href="assets/css/menu.css">
 </head>
 <body>
-	<p>Coming Soon...</p>
+	<nav>
+		<span class="brand-logo">
+			<img src="assets/img/schdesign-logo.png">
+			<p>Logótár</p>
+		</span>
+		<span class="menu-items">
+			<a href="#simonyi">Simonyi</a>
+			<a href="#kultur">Kultúr</a>
+			<a href="#sport">Sport</a>
+			<a href="#szor">SZOR</a>
+			<a href="#kszk">KSZK</a>
+			<a href="#kofer">KoFER</a>
+			<a href="#schonherz">SCH</a>
+		</span>
+	</nav>
 </body>
 </html>
