--- a/index.html
+++ b/index.html
@@ -2,24 +2,43 @@
 <html>
 <head>
 	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Schdesign Logótár</title>
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="assets/css/menu.css">
 </head>
 <body>
 	<nav>
 		<span class="brand-logo">
-			<img src="assets/img/schdesign-logo.png">
+			<img src="assets/img/schdesign-logo.png" alt="Schdesign">
 			<p>Logótár</p>
 		</span>
 		<span class="menu-items">
-			<a href="#simonyi">Simonyi</a>
+			<a href="#bulis">Bulis</a>
+			<a href="#kofer">KoFER</a>
+			<a href="#kszk">KSZK</a>
 			<a href="#kultur">Kultúr</a>
+			<a href="#simonyi">Simonyi</a>
+			<a href="#sssl">SSSL</a>
 			<a href="#sport">Sport</a>
 			<a href="#szor">SZOR</a>
-			<a href="#kszk">KSZK</a>
-			<a href="#kofer">KoFER</a>
 			<a href="#schonherz">SCH</a>
 		</span>
+		<span class="hamburger-button">
+			<i class="fas fa-bars"></i>
+		</span>
 	</nav>
+	<span class="hidden-menu">
+		<a href="#bulis">Bulis reszort</a>
+			<a href="#kofer">KoFER</a>
+			<a href="#kszk">Kollégiumi Számítástechnikai Kör</a>
+			<a href="#kultur">Kultúr reszort</a>
+			<a href="#simonyi">Simonyi Károly Szakkollégium</a>
+			<a href="#sssl">Szent Schönherz Senior Lovagrend</a>
+			<a href="#sport">Sportreszort</a>
+			<a href="#szor">SZolgáltató reszort</a>
+			<a href="#schonherz">Schönherz</a>
+	</span>
 </body>
+<script type="text/javascript" src="assets/js/menu.js"></script>
 </html>
