responsive menu button error correction

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 			<a href="#simonyi">Simonyi Károly Szakkollégium</a>
 			<a href="#sssl">Szent Schönherz Senior Lovagrend</a>
 			<a href="#sport">Sportreszort</a>
-			<a href="#szor">SZolgáltató reszort</a>
+			<a href="#szor">Szolgáltató reszort</a>
 			<a href="#schonherz">Schönherz</a>
 	</span>
 </body>
