menu script code quality improve

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<title>Schdesign Logótár</title>
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="assets/css/menu.css">
+	<link rel="stylesheet" type="text/css" href="assets/css/logo-library.css">
 	<script type="text/javascript" src="assets/js/menu.js"></script>
 </head>
 <body>
@@ -40,5 +41,6 @@
 			<a href="#szor">Szolgáltató reszort</a>
 			<a href="#schonherz">Schönherz</a>
 	</span>
+	<div class="logo-library"></div>
 </body>
 </html>
