cards added, skeleton build nearly complete

--- a/index.html
+++ b/index.html
@@ -41,6 +41,106 @@
 			<a href="#szor">Szolgáltató reszort</a>
 			<a href="#schonherz">Schönherz</a>
 	</span>
-	<div class="logo-library"></div>
+	<div class="logo-library">
+		<span>
+			<img src="assets/img/display-logos/simonyi/schdesign.png">
+			<span>
+				<p>Schönherz Design Stúdió</p>
+				<span>
+					<a href="">SVG</a>
+					<a href="">PNG</a>
+					<a href="">.ai</a>
+				</span>
+			</span>
+		</span>
+		<span>
+			<img src="assets/img/display-logos/simonyi/schdesign.png">
+			<span>
+				<p>Schönherz Elektronikai Műhely</p>
+				<span>
+					<a href="">SVG</a>
+					<a href="">PNG</a>
+					<a href="">.ai</a>
+				</span>
+			</span>
+		</span>
+		<span>
+			<img src="assets/img/display-logos/simonyi/schdesign.png">
+			<span>
+				<p>Schönherz Design Stúdió</p>
+				<span>
+					<a href="">SVG</a>
+					<a href="">PNG</a>
+					<a href="">.ai</a>
+				</span>
+			</span>
+		</span>
+		<span>
+			<img src="assets/img/display-logos/simonyi/schdesign.png">
+			<span>
+				<p>Schönherz Design Stúdió</p>
+				<span>
+					<a href="">SVG</a>
+					<a href="">PNG</a>
+					<a href="">.ai</a>
+				</span>
+			</span>
+		</span>
+		<span>
+			<img src="assets/img/display-logos/simonyi/schdesign.png">
+			<span>
+				<p>Schönherz Design Stúdió</p>
+				<span>
+					<a href="">SVG</a>
+					<a href="">PNG</a>
+					<a href="">.ai</a>
+				</span>
+			</span>
+		</span>
+		<span>
+			<img src="assets/img/display-logos/simonyi/schdesign.png">
+			<span>
+				<p>Schönherz Design Stúdió</p>
+				<span>
+					<a href="">SVG</a>
+					<a href="">PNG</a>
+					<a href="">.ai</a>
+				</span>
+			</span>
+		</span>
+		<span>
+			<img src="assets/img/display-logos/simonyi/schdesign.png">
+			<span>
+				<p>Schönherz Design Stúdió</p>
+				<span>
+					<a href="">SVG</a>
+					<a href="">PNG</a>
+					<a href="">.ai</a>
+				</span>
+			</span>
+		</span>
+		<span>
+			<img src="assets/img/display-logos/simonyi/schdesign.png">
+			<span>
+				<p>Schönherz Design Stúdió</p>
+				<span>
+					<a href="">SVG</a>
+					<a href="">PNG</a>
+					<a href="">.ai</a>
+				</span>
+			</span>
+		</span>
+		<span>
+			<img src="assets/img/display-logos/simonyi/schdesign.png">
+			<span>
+				<p>Schönherz Design Stúdió</p>
+				<span>
+					<a href="">SVG</a>
+					<a href="">PNG</a>
+					<a href="">.ai</a>
+				</span>
+			</span>
+		</span>
+	</div>
 </body>
 </html>
