--- a/index.html
+++ b/index.html
@@ -55,18 +55,7 @@
 			</span>
 		</span>
 		<span>
-			<img src="assets/img/display-logos/simonyi/schdesign.png">
-			<span>
-				<p>Schönherz Elektronikai Műhely</p>
-				<span>
-					<a href="">SVG</a>
-					<a href="">PNG</a>
-					<a href="">.ai</a>
-				</span>
-			</span>
-		</span>
-		<span>
-			<img src="assets/img/display-logos/simonyi/schdesign.png">
+			<img src="assets/database/simonyi/schdesign/display-image.png">
 			<span>
 				<p>Schönherz Design Stúdió</p>
 				<span>
@@ -77,7 +66,7 @@
 			</span>
 		</span>
 		<span>
-			<img src="assets/img/display-logos/simonyi/schdesign.png">
+			<img src="assets/database/simonyi/schdesign/display-image.png">
 			<span>
 				<p>Schönherz Design Stúdió</p>
 				<span>
@@ -88,7 +77,7 @@
 			</span>
 		</span>
 		<span>
-			<img src="assets/img/display-logos/simonyi/schdesign.png">
+			<img src="assets/database/simonyi/schdesign/display-image.png">
 			<span>
 				<p>Schönherz Design Stúdió</p>
 				<span>
@@ -99,7 +88,7 @@
 			</span>
 		</span>
 		<span>
-			<img src="assets/img/display-logos/simonyi/schdesign.png">
+			<img src="assets/database/simonyi/schdesign/display-image.png">
 			<span>
 				<p>Schönherz Design Stúdió</p>
 				<span>
@@ -110,7 +99,7 @@
 			</span>
 		</span>
 		<span>
-			<img src="assets/img/display-logos/simonyi/schdesign.png">
+			<img src="assets/database/simonyi/schdesign/display-image.png">
 			<span>
 				<p>Schönherz Design Stúdió</p>
 				<span>
@@ -121,7 +110,7 @@
 			</span>
 		</span>
 		<span>
-			<img src="assets/img/display-logos/simonyi/schdesign.png">
+			<img src="assets/database/simonyi/schdesign/display-image.png">
 			<span>
 				<p>Schönherz Design Stúdió</p>
 				<span>
@@ -132,7 +121,18 @@
 			</span>
 		</span>
 		<span>
-			<img src="assets/img/display-logos/simonyi/schdesign.png">
+			<img src="assets/database/simonyi/schdesign/display-image.png">
+			<span>
+				<p>Schönherz Design Stúdió</p>
+				<span>
+					<a href="">SVG</a>
+					<a href="">PNG</a>
+					<a href="">.ai</a>
+				</span>
+			</span>
+		</span>
+		<span>
+			<img src="assets/database/simonyi/schdesign/display-image.png">
 			<span>
 				<p>Schönherz Design Stúdió</p>
 				<span>
