build grid on click test

--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@
 			<p>Logótár</p>
 		</span>
 		<span class="menu-items">
-			<a href="#bulis">Bulis</a>
-			<a href="#kofer">KoFER</a>
-			<a href="#kszk">KSZK</a>
-			<a href="#kultur">Kultúr</a>
-			<a href="#simonyi">Simonyi</a>
-			<a href="#sssl">SSSL</a>
-			<a href="#sport">Sport</a>
-			<a href="#szor">SZOR</a>
-			<a href="#schonherz">SCH</a>
+			<a href="#bulis" data-group="bulis">Bulis</a>
+			<a href="#kofer" data-group="kofer">KoFER</a>
+			<a href="#kszk" data-group="kszk">KSZK</a>
+			<a href="#kultur" data-group="kultur">Kultúr</a>
+			<a href="#simonyi" data-group="simonyi">Simonyi</a>
+			<a href="#sssl" data-group="sssl">SSSL</a>
+			<a href="#sport" data-group="sport">Sport</a>
+			<a href="#szor" data-group="szor">SZOR</a>
+			<a href="#schonherz" data-group="schonherz">SCH</a>
 		</span>
 		<span class="hamburger-button">
 			<i class="fas fa-bars"></i>
@@ -42,106 +42,6 @@
 			<a href="#szor">Szolgáltató reszort</a>
 			<a href="#schonherz">Schönherz</a>
 	</span>
-	<div class="logo-library">
-		<span>
-			<img src="assets/database/simonyi/schdesign/display-image.png">
-			<span>
-				<p>Schönherz Design Stúdió</p>
-				<span>
-					<a href="">SVG</a>
-					<a href="">PNG</a>
-					<a href="">.ai</a>
-				</span>
-			</span>
-		</span>
-		<span>
-			<img src="assets/database/simonyi/schdesign/display-image.png">
-			<span>
-				<p>Schönherz Design Stúdió</p>
-				<span>
-					<a href="">SVG</a>
-					<a href="">PNG</a>
-					<a href="">.ai</a>
-				</span>
-			</span>
-		</span>
-		<span>
-			<img src="assets/database/simonyi/schdesign/display-image.png">
-			<span>
-				<p>Schönherz Design Stúdió</p>
-				<span>
-					<a href="">SVG</a>
-					<a href="">PNG</a>
-					<a href="">.ai</a>
-				</span>
-			</span>
-		</span>
-		<span>
-			<img src="assets/database/simonyi/schdesign/display-image.png">
-			<span>
-				<p>Schönherz Design Stúdió</p>
-				<span>
-					<a href="">SVG</a>
-					<a href="">PNG</a>
-					<a href="">.ai</a>
-				</span>
-			</span>
-		</span>
-		<span>
-			<img src="assets/database/simonyi/schdesign/display-image.png">
-			<span>
-				<p>Schönherz Design Stúdió</p>
-				<span>
-					<a href="">SVG</a>
-					<a href="">PNG</a>
-					<a href="">.ai</a>
-				</span>
-			</span>
-		</span>
-		<span>
-			<img src="assets/database/simonyi/schdesign/display-image.png">
-			<span>
-				<p>Schönherz Design Stúdió</p>
-				<span>
-					<a href="">SVG</a>
-					<a href="">PNG</a>
-					<a href="">.ai</a>
-				</span>
-			</span>
-		</span>
-		<span>
-			<img src="assets/database/simonyi/schdesign/display-image.png">
-			<span>
-				<p>Schönherz Design Stúdió</p>
-				<span>
-					<a href="">SVG</a>
-					<a href="">PNG</a>
-					<a href="">.ai</a>
-				</span>
-			</span>
-		</span>
-		<span>
-			<img src="assets/database/simonyi/schdesign/display-image.png">
-			<span>
-				<p>Schönherz Design Stúdió</p>
-				<span>
-					<a href="">SVG</a>
-					<a href="">PNG</a>
-					<a href="">.ai</a>
-				</span>
-			</span>
-		</span>
-		<span>
-			<img src="assets/database/simonyi/schdesign/display-image.png">
-			<span>
-				<p>Schönherz Design Stúdió</p>
-				<span>
-					<a href="">SVG</a>
-					<a href="">PNG</a>
-					<a href="">.ai</a>
-				</span>
-			</span>
-		</span>
-	</div>
+	<div class="logo-library"></div>
 </body>
 </html>
