menu remembers active tab

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 			<a href="#kofer" data-group="kofer">KoFER</a>
 			<a href="#kszk" data-group="kszk">KSZK</a>
 			<a href="#kultur" data-group="kultur">Kultúr</a>
-			<a href="#simonyi" data-group="simonyi">Simonyi</a>
+			<a href="#simonyi" data-group="simonyi" class="menu-active">Simonyi</a>
 			<a href="#sssl" data-group="sssl">SSSL</a>
 			<a href="#sport" data-group="sport">Sport</a>
 			<a href="#szor" data-group="szor">SZOR</a>
