data groups set

--- a/index.html
+++ b/index.html
@@ -31,15 +31,15 @@
 		</span>
 	</nav>
 	<span class="hidden-menu">
-		<a href="#bulis">Bulis reszort</a>
-			<a href="#kofer">KoFER</a>
-			<a href="#kszk">Kollégiumi Számítástechnikai Kör</a>
-			<a href="#kultur">Kultúr reszort</a>
-			<a href="#simonyi">Simonyi Károly Szakkollégium</a>
-			<a href="#sssl">Szent Schönherz Senior Lovagrend</a>
-			<a href="#sport">Sportreszort</a>
-			<a href="#szor">Szolgáltató reszort</a>
-			<a href="#schonherz">Schönherz</a>
+		<a href="#bulis" data-group="bulis">Bulis reszort</a>
+		<a href="#kofer" data-group="kofer">KoFER</a>
+		<a href="#kszk" data-group="kszk">Kollégiumi Számítástechnikai Kör</a>
+		<a href="#kultur" data-group="kultur">Kultúr reszort</a>
+		<a href="#simonyi" data-group="simonyi">Simonyi Károly Szakkollégium</a>
+		<a href="#sssl" data-group="sssl">Szent Schönherz Senior Lovagrend</a>
+		<a href="#sport" data-group="sport">Sportreszort</a>
+		<a href="#szor" data-group="szor">Szolgáltató reszort</a>
+		<a href="#schonherz" data-group="schonherz">Schönherz</a>
 	</span>
 	<div class="logo-library"></div>
 </body>
