--- a/index.html
+++ b/index.html
@@ -16,30 +16,30 @@
 			<p>Logótár</p>
 		</span>
 		<span class="menu-items">
-			<a href="#bulis" data-group="bulis">Bulis</a>
-			<a href="#kofer" data-group="kofer">KoFER</a>
-			<a href="#kszk" data-group="kszk">KSZK</a>
-			<a href="#kultur" data-group="kultur">Kultúr</a>
-			<a href="#simonyi" data-group="simonyi" class="menu-active">Simonyi</a>
-			<a href="#sssl" data-group="sssl">SSSL</a>
-			<a href="#sport" data-group="sport">Sport</a>
-			<a href="#szor" data-group="szor">SZOR</a>
-			<a href="#schonherz" data-group="schonherz">SCH</a>
+			<a href="#" data-group="bulis">Bulis</a>
+			<a href="#" data-group="kofer">KoFER</a>
+			<a href="#" data-group="kszk">KSZK</a>
+			<a href="#" data-group="kultur">Kultúr</a>
+			<a href="#" data-group="simonyi" class="menu-active">Simonyi</a>
+			<a href="#" data-group="sssl">SSSL</a>
+			<a href="#" data-group="sport">Sport</a>
+			<a href="#" data-group="szor">SZOR</a>
+			<a href="#" data-group="schonherz">SCH</a>
 		</span>
 		<span class="hamburger-button">
 			<i class="fas fa-bars"></i>
 		</span>
 	</nav>
 	<span class="hidden-menu">
-		<a href="#bulis" data-group="bulis">Bulis reszort</a>
-		<a href="#kofer" data-group="kofer">KoFER</a>
-		<a href="#kszk" data-group="kszk">Kollégiumi Számítástechnikai Kör</a>
-		<a href="#kultur" data-group="kultur">Kultúr reszort</a>
-		<a href="#simonyi" data-group="simonyi">Simonyi Károly Szakkollégium</a>
-		<a href="#sssl" data-group="sssl">Szent Schönherz Senior Lovagrend</a>
-		<a href="#sport" data-group="sport">Sportreszort</a>
-		<a href="#szor" data-group="szor">Szolgáltató reszort</a>
-		<a href="#schonherz" data-group="schonherz">Schönherz</a>
+		<a href="#" data-group="bulis">Bulis reszort</a>
+		<a href="#" data-group="kofer">KoFER</a>
+		<a href="#" data-group="kszk">Kollégiumi Számítástechnikai Kör</a>
+		<a href="#" data-group="kultur">Kultúr reszort</a>
+		<a href="#" data-group="simonyi">Simonyi Károly Szakkollégium</a>
+		<a href="#" data-group="sssl">Szent Schönherz Senior Lovagrend</a>
+		<a href="#" data-group="sport">Sportreszort</a>
+		<a href="#" data-group="szor">Szolgáltató reszort</a>
+		<a href="#" data-group="schonherz">Schönherz</a>
 	</span>
 	<div class="logo-library"></div>
 </body>
