--- a/index.html
+++ b/index.html
@@ -1,46 +1,54 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Schdesign Logótár</title>
-	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
-	<link rel="stylesheet" type="text/css" href="assets/css/menu.css">
-	<link rel="stylesheet" type="text/css" href="assets/css/logo-library.css">
-	<script type="text/javascript" src="assets/js/control.js"></script>
-</head>
-<body>
-	<nav>
-		<span class="brand-logo">
-			<img src="assets/img/schdesign-logo.png" alt="Schdesign">
-			<p>Logótár</p>
-		</span>
-		<span class="menu-items">
-			<a href="#" data-group="bulis">Bulis</a>
-			<a href="#" data-group="kofer">KoFER</a>
-			<a href="#" data-group="kszk">KSZK</a>
-			<a href="#" data-group="kultur">Kultúr</a>
-			<a href="#" data-group="simonyi" class="menu-active">Simonyi</a>
-			<a href="#" data-group="sssl">SSSL</a>
-			<a href="#" data-group="sport">Sport</a>
-			<a href="#" data-group="szor">SZOR</a>
-			<a href="#" data-group="schonherz">SCH</a>
-		</span>
-		<span class="hamburger-button">
-			<i class="fas fa-bars"></i>
-		</span>
-	</nav>
-	<span class="hidden-menu">
-		<a href="#" data-group="bulis">Bulis reszort</a>
-		<a href="#" data-group="kofer">KoFER</a>
-		<a href="#" data-group="kszk">Kollégiumi Számítástechnikai Kör</a>
-		<a href="#" data-group="kultur">Kultúr reszort</a>
-		<a href="#" data-group="simonyi">Simonyi Károly Szakkollégium</a>
-		<a href="#" data-group="sssl">Szent Schönherz Senior Lovagrend</a>
-		<a href="#" data-group="sport">Sportreszort</a>
-		<a href="#" data-group="szor">Szolgáltató reszort</a>
-		<a href="#" data-group="schonherz">Schönherz</a>
-	</span>
-	<div class="logo-library"></div>
-</body>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Schdesign Logótár</title>
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
+      integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" type="text/css" href="assets/css/menu.css" />
+    <link rel="stylesheet" type="text/css" href="assets/css/logo-library.css" />
+  </head>
+  <body>
+    <nav>
+      <span class="brand-logo">
+        <img src="assets/img/schdesign-logo.png" alt="Schdesign" />
+        <p>Logótár</p>
+      </span>
+      <span class="menu-items">
+        <a href="#" data-group="bulis">Bulis</a>
+        <a href="#" data-group="kofer">KoFER</a>
+        <a href="#" data-group="kszk">KSZK</a>
+        <a href="#" data-group="kultur">Kultúr</a>
+        <a href="#" data-group="simonyi" class="menu-active">Simonyi</a>
+        <a href="#" data-group="sssl">SSSL</a>
+        <a href="#" data-group="sport">Sport</a>
+        <a href="#" data-group="szor">SZOR</a>
+        <a href="#" data-group="schonherz">SCH</a>
+      </span>
+      <span class="hamburger-button">
+        <i class="fas fa-bars"></i>
+      </span>
+    </nav>
+    <span class="hidden-menu">
+      <a href="#" data-group="bulis">Bulis reszort</a>
+      <a href="#" data-group="kofer">KoFER</a>
+      <a href="#" data-group="kszk">Kollégiumi Számítástechnikai Kör</a>
+      <a href="#" data-group="kultur">Kultúr reszort</a>
+      <a href="#" data-group="simonyi">Simonyi Károly Szakkollégium</a>
+      <a href="#" data-group="sssl">Szent Schönherz Senior Lovagrend</a>
+      <a href="#" data-group="sport">Sportreszort</a>
+      <a href="#" data-group="szor">Szolgáltató reszort</a>
+      <a href="#" data-group="schonherz">Schönherz</a>
+    </span>
+    <div class="logo-library"></div>
+    <script type="text/javascript" src="assets/js/DatabaseService.js"></script>
+    <script type="text/javascript" src="assets/js/GridBuilder.js"></script>
+    <script type="text/javascript" src="assets/js/MenuHandler.js"></script>
+    <script type="text/javascript" src="assets/js/main.js"></script>
+  </body>
 </html>
