Redefine JSON scheme. Add animation to cards.

--- a/index.html
+++ b/index.html
@@ -19,32 +19,12 @@
         <img src="assets/img/schdesign-logo.png" alt="Schdesign" />
         <p>Logótár</p>
       </span>
-      <span class="menu-items">
-        <a href="#" data-group="bulis">Bulis</a>
-        <a href="#" data-group="kofer">KoFER</a>
-        <a href="#" data-group="kszk">KSZK</a>
-        <a href="#" data-group="kultur">Kultúr</a>
-        <a href="#" data-group="simonyi" class="menu-active">Simonyi</a>
-        <a href="#" data-group="sssl">SSSL</a>
-        <a href="#" data-group="sport">Sport</a>
-        <a href="#" data-group="szor">SZOR</a>
-        <a href="#" data-group="schonherz">SCH</a>
-      </span>
+      <span class="menu-items"> </span>
       <span class="hamburger-button">
         <i class="fas fa-bars"></i>
       </span>
     </nav>
-    <span class="hidden-menu">
-      <a href="#" data-group="bulis">Bulis reszort</a>
-      <a href="#" data-group="kofer">KoFER</a>
-      <a href="#" data-group="kszk">Kollégiumi Számítástechnikai Kör</a>
-      <a href="#" data-group="kultur">Kultúr reszort</a>
-      <a href="#" data-group="simonyi">Simonyi Károly Szakkollégium</a>
-      <a href="#" data-group="sssl">Szent Schönherz Senior Lovagrend</a>
-      <a href="#" data-group="sport">Sportreszort</a>
-      <a href="#" data-group="szor">Szolgáltató reszort</a>
-      <a href="#" data-group="schonherz">Schönherz</a>
-    </span>
+    <span class="hidden-menu"> </span>
     <div class="logo-library"></div>
     <script type="text/javascript" src="assets/js/DatabaseService.js"></script>
     <script type="text/javascript" src="assets/js/GridBuilder.js"></script>
