--- a/index.html
+++ b/index.html
@@ -1,34 +1,33 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Schdesign Logótár</title>
-    <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
-      integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" type="text/css" href="assets/css/menu.css" />
-    <link rel="stylesheet" type="text/css" href="assets/css/logo-library.css" />
-  </head>
-  <body>
-    <nav>
-      <span class="brand-logo">
+
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Schdesign Logótár</title>
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous" />
+  <link rel="stylesheet" type="text/css" href="assets/css/menu.css" />
+  <link rel="stylesheet" type="text/css" href="assets/css/logo-library.css" />
+</head>
+
+<body>
+  <nav>
+    <span class="brand-logo">
         <img src="assets/img/schdesign-logo.png" alt="Schdesign" />
         <p>Logótár</p>
+        <a href="#" class="brand-drive">Legyen-e itt drive link?</a>
       </span>
-      <span class="menu-items"> </span>
-      <span class="hamburger-button">
+    <span class="menu-items"> </span>
+    <span class="hamburger-button">
         <i class="fas fa-bars"></i>
       </span>
-    </nav>
-    <span class="hidden-menu"> </span>
-    <div class="logo-library"></div>
-    <script type="text/javascript" src="assets/js/DatabaseService.js"></script>
-    <script type="text/javascript" src="assets/js/GridBuilder.js"></script>
-    <script type="text/javascript" src="assets/js/MenuHandler.js"></script>
-    <script type="text/javascript" src="assets/js/main.js"></script>
-  </body>
+  </nav>
+  <span class="hidden-menu"> </span>
+  <div class="logo-library"></div>
+  <script type="text/javascript" src="assets/js/DatabaseService.js"></script>
+  <script type="text/javascript" src="assets/js/GridBuilder.js"></script>
+  <script type="text/javascript" src="assets/js/MenuHandler.js"></script>
+  <script type="text/javascript" src="assets/js/main.js"></script>
+</body>
+
 </html>
