Remove obstructing drive text

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <span class="brand-logo">
         <img src="assets/img/schdesign-logo.png" alt="Schdesign" />
         <p>Logótár</p>
-        <a href="#" class="brand-drive">Legyen-e itt drive link?</a>
+        <!--<a href="#" class="brand-drive">Legyen-e itt drive link?</a>-->
       </span>
     <span class="menu-items"> </span>
     <span class="hamburger-button">
