Hidden menu toggler animation

--- a/index.html
+++ b/index.html
@@ -18,9 +18,7 @@
         <!--<a href="#" class="brand-drive">Legyen-e itt drive link?</a>-->
       </span>
     <span class="menu-items"> </span>
-    <span class="hamburger-button">
-        <i class="fas fa-bars"></i>
-      </span>
+    <span class="hamburger-button"></span>
   </nav>
   <span class="hidden-menu"> </span>
   <div class="logo-library"></div>
