--- a/index.html
+++ b/index.html
@@ -8,15 +8,24 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous" />
   <link rel="stylesheet" type="text/css" href="assets/css/menu.css" />
   <link rel="stylesheet" type="text/css" href="assets/css/logo-library.css" />
+  <link rel="stylesheet" type="text/css" href="assets/css/menu-dark.css" />
+  <link rel="stylesheet" type="text/css" href="assets/css/logo-library-dark.css" />
 </head>
 
 <body>
   <nav>
     <span class="brand-logo">
-        <img src="assets/img/schdesign-logo.png" alt="Schdesign" />
-        <p>Logótár</p>
-        <!--<a href="#" class="brand-drive">Legyen-e itt drive link?</a>-->
-      </span>
+        <!--<img src="assets/img/schdesign-logo.png" alt="Schdesign" />-->
+        <span class="title sch">sch</span><span class="title design">design</span>
+    <p>Logótár</p>
+
+    <label class="switch">
+        <input type="checkbox">
+        <div class="slider"></div>
+        </label>
+
+    <!--<a href="#" class="brand-drive">Legyen-e itt drive link?</a>-->
+    </span>
     <span class="menu-items"> </span>
     <span class="hamburger-button"></span>
   </nav>
