fix mobile header

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <nav>
     <span class="brand-logo">
         <!--<img src="assets/img/schdesign-logo.png" alt="Schdesign" />-->
-        <span class="title sch">sch</span><span class="title design">design</span>
+        <span class="title sch">s</span><span class="title design"></span>
     <p>Logótár</p>
 
     <label class="switch">
