--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 </head>
 
 <body>
+  <span class="hidden-menu"> </span>
   <nav>
     <span class="brand-logo">
-        <!--<img src="assets/img/schdesign-logo.png" alt="Schdesign" />-->
         <span class="title sch">s</span><span class="title design"></span>
     <p>Logótár</p>
 
@@ -23,14 +23,20 @@
         <input type="checkbox">
         <div class="slider"></div>
         </label>
-
-    <!--<a href="#" class="brand-drive">Legyen-e itt drive link?</a>-->
     </span>
     <span class="menu-items"> </span>
     <span class="hamburger-button"></span>
   </nav>
-  <span class="hidden-menu"> </span>
-  <div class="logo-library"></div>
+  <div class="page-container">
+    <div class="logo-library"></div>
+    <footer class="footer">
+      <div class="container">
+        <span class="text-muted-left">Copyright &copy; 2019 <span class="footer-legal"><span class="footer-legal-sch">sch</span>design</span>
+        </span>
+        <span class="text-muted-right">Kapcsolat: <a class="text-muted-link" href="mailto:andras.borbas@schdesign.hu?subject=Logotar Web Bug">andras.borbas@schdesign.hu</a></span>
+      </div>
+    </footer>
+  </div>
   <script type="text/javascript" src="assets/js/DatabaseService.js"></script>
   <script type="text/javascript" src="assets/js/GridBuilder.js"></script>
   <script type="text/javascript" src="assets/js/MenuHandler.js"></script>
