add link to footer logo

--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
     <div class="logo-library"></div>
     <footer class="footer">
       <div class="container">
-        <span class="text-muted-left">Copyright &copy; 2019 <span class="footer-legal"><span class="footer-legal-sch">sch</span>design</span>
+        <span class="text-muted-left">Copyright &copy; 2019 
+        <a href="https://schdesign.hu"><span class="footer-legal"><span class="footer-legal-sch">sch</span>design</span>
+        </a>
         </span>
         <span class="text-muted-right">Kapcsolat: <a class="text-muted-link" href="mailto:andras.borbas@schdesign.hu?subject=Logotar Web Bug">andras.borbas@schdesign.hu</a></span>
       </div>
