--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <a href="https://schdesign.hu"><span class="footer-legal"><span class="footer-legal-sch">sch</span>design</span>
         </a>
         </span>
-        <span class="text-muted-right">Kapcsolat: <a class="text-muted-link" href="mailto:andras.borbas@schdesign.hu?subject=Logotar Web Bug">andras.borbas@schdesign.hu</a></span>
+        <span class="text-muted-right">Kapcsolat: <a class="text-muted-link" href="mailto:hello@schdesign.hu?subject=Logotar Web Bug">hello@schdesign.hu</a></span>
       </div>
     </footer>
   </div>
