add cookie to track last open page and reformat code

--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
   <span class="hidden-menu"> </span>
   <nav>
     <span class="brand-logo">
-        <span class="title sch">s</span><span class="title design"></span>
+      <span class="title sch">s</span><span class="title design"></span>
     <p>Logótár</p>
 
     <label class="switch">
         <input type="checkbox">
         <div class="slider"></div>
-        </label>
+      </label>
     </span>
     <span class="menu-items"> </span>
     <span class="hamburger-button"></span>
@@ -31,11 +31,13 @@
     <div class="logo-library"></div>
     <footer class="footer">
       <div class="container">
-        <span class="text-muted-left">Copyright &copy; 2019 
-        <a href="https://schdesign.hu"><span class="footer-legal"><span class="footer-legal-sch">sch</span>design</span>
+        <span class="text-muted-left">Copyright &copy; 2019
+          <a href="https://schdesign.hu"><span class="footer-legal"><span
+                class="footer-legal-sch">sch</span>design</span>
         </a>
         </span>
-        <span class="text-muted-right">Kapcsolat: <a class="text-muted-link" href="mailto:hello@schdesign.hu?subject=Logotar Web Bug">Hibabejelentés</a></span>
+        <span class="text-muted-right">Kapcsolat: <a class="text-muted-link"
+            href="mailto:hello@schdesign.hu?subject=Logotar Web Bug">Hibabejelentés</a></span>
       </div>
     </footer>
   </div>
