add copyright tooltip

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <div class="logo-library"></div>
     <footer class="footer">
       <div class="container">
-        <span class="text-muted-left">Copyright &copy; 2020
+        <span class="text-muted-left" title="All images are copyright to their respective owners.">Copyright &copy; 2020
           <a href="https://schdesign.hu"><span class="footer-legal"><span
                 class="footer-legal-sch">sch</span>design</span>
         </a>
