--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="hu">
 
 <head>
   <meta charset="utf-8" />
+  <meta name="description" content="Az schdesign logótár tartalmazza a Schönherz kollégium köreinek logóit.">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Schdesign Logótár</title>
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous" />
@@ -27,7 +28,7 @@
     <span class="menu-items"> </span>
     <span class="hamburger-button"></span>
   </nav>
-  <div class="page-container">
+  <main class="page-container">
     <div class="logo-library"></div>
     <footer class="footer">
       <div class="container">
@@ -40,7 +41,7 @@
             href="mailto:hello@schdesign.hu?subject=Logotar Web Bug">Hibabejelentés</a></span>
       </div>
     </footer>
-  </div>
+  </main>
   <script type="text/javascript" src="assets/js/DatabaseService.js"></script>
   <script type="text/javascript" src="assets/js/GridBuilder.js"></script>
   <script type="text/javascript" src="assets/js/MenuHandler.js"></script>
