Switch theme by clicking on logo

--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,10 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#f8485e" />
     <meta
       name="description"
-      content="Az schdesign logótár tartalmazza a Schönherz kollégium köreinek logóit."
+      content="Az schdesign Logótár tartalmazza a Schönherz kollégium köreinek logóit."
     />
     <!-- Google Tag Manager -->
     <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
